atividade1/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: labnginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend: 
    service: 
      name: nginx-service
      port:
        number: 80
  rules:
    - host: compasso-nginx.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
